# kyii

./: .gitignore  CNAME  Caddyfile  Makefile  Procfile  app.json  count.sh  dev-run  docker-compose.yml  fmt.sh  index.html  kyun.py  package-lock.json  readme.md
airy/: .env  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  Procfile  README.md  babel-compile  babel-update  babel.cfg  default.nix  docker-compose.yml  flake.nix  messages-en.po  messages.pot  package-lock.json  package.json  playwright.config.js  pyproject.toml  shell.nix  uwsgi.ini  webauthn-schema.json
airy/.github/workflows/: nix.yml
airy/airy/: .gitignore  admin.py  app.py  cli.py  config.py  db.py  docker_config.py  etc.py  local_config.py  local_config_sample.py  oauth2.py  oauth2_client.py  seed.py  session.py  test.db  test.old.db  test.sync-conflict-20220623-134907-XXKY5BE.db  test.sync-conflict-20220623-135236-XXKY5BE.db  test.sync-conflict-20220623-135536-XXKY5BE.db  ul.py  util.py  util2.py  verifiers.py
airy/airy/routes/: __init__.py  api.py  api2.py  api_test.py  main.py  oauth.py  rika.py  silica.py  util.py  yuui.py
airy/airy/static/: base.css
airy/airy/templates/: authz.html  base.html  create_client.html  email_verify.html
airy/airy/verifiers/: ;  __init__.py  errors.py  oauth.py  (+3 more)
airy/deploy/: kyii-airy.service  setup.sh  start.sh  uwsgi.ini
airy/docker/: .gitignore  Makefile  local_config.py.~1~  run.sh  uwsgi.ini
airy/heroku/: release.sh  web.sh
airy/instance/: test.db
airy/migrations/: script.py.mako
airy/tests-integration/: anonymous.spec.js  user.spec.js
(+407 files in other folders)
