[tool.poetry]
name = "airy"
version = "0.1.0"
description = ""
authors = ["nyiyui <+@nyiyui.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
flask-sqlalchemy = "*"
sqlalchemy = "^1.4.46"
authlib = "*"
flask-migrate = "*"
sqlalchemy-utils = "*"
flask-session = "*"
flask-cors = "*"
pynacl = "*"
flask-admin = "*"
wtforms = {extras = ["email"], version = "*"}
email-validator = "*"
python-dotenv = "*"
pyotp = "*"
passlib = "*"
flask-wtf = "*"
jsonschema = "*"
flask-mail = "*"
blake3 = "*"
pillow = "*"
webauthn = "*"
flask-caching = "*"
flask-limiter = "*"
gunicorn = "*"
flask-server-timing = "0.1.2"
flask-babel = "*"
flask-qrcode = "*"
requests = "*"
flask-moment = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
mypy = "*"
types-Pillow = "*"
types-Flask = "*"
types-Flask-SQLAlchemy = "*"
types-sqlalchemy_utils = "*"
types-SQLAlchemy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
